--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
     
     <h1>hola mundo</h1>
 
-    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Mollitia neque fuga alias itaque minus, dolores asperiores dolor exercitationem cumque recusandae fugit reiciendis adipisci harum tempora soluta facilis. Vitae, deserunt ad!</p>
+    <p>
+    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Mollitia neque fuga alias itaque minus,
+     dolores asperiores dolor exercitationem cumque recusandae fugit reiciendis adipisci harum tempora
+     soluta facilis. Vitae, deserunt ad!
+    </p>
 </body>
 </html>
