se agrego una imagen

--- a/index.html
+++ b/index.html
@@ -15,5 +15,7 @@
      dolores asperiores dolor exercitationem cumque recusandae fugit reiciendis adipisci harum tempora
      soluta facilis. Vitae, deserunt ad!
     </p>
+
+    <img src="	https://static.wikia.nocookie.net/doblaje/images/2…/revision/latest?cb=20190208044143&path-prefix=es">    
 </body>
 </html>
