--- a/index.html
+++ b/index.html
@@ -9,5 +9,7 @@
 <body>
     
     <h1>hola mundo</h1>
+
+    <img src="https://freepngimg.com/thumb/kirby/8-2-kirby-free-download-png.png">
 </body>
 </html>
